# TopPlan

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE  README.md  README.zh-CN.md  environment.yml  index.html  package.json  playwright.config.js  pnpm-lock.yaml  vite.config.ts
.codex/environments/: environment.toml
docs/research/: windows-click-through-solutions.md
scripts/: assert-clickthrough-window.ps1  clickthrough-smoke-driver.mjs  run-clickthrough-smoke.ps1  run-e2e.mjs  tauri.clickthrough-test.conf.json
src/: App.svelte  app.css  app.d.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: CodeMirrorEditor.svelte  MiniNoteView.svelte  RichMarkdownEditor.svelte  dailyFile.ts  defaults.ts  i18n.ts  markdown.ts  markdownView.ts  tauriClient.ts
tests/e2e/: task-checkbox.spec.js
