[package]
name = "topplan"
version = "0.3.0"
description = "A local-first daily planner and Markdown task manager."
authors = ["Haoiew"]
license = "CC-BY-4.0"
repository = "https://github.com/haoiew/TopPlan"
homepage = "https://github.com/haoiew/TopPlan"
keywords = ["windows", "planner", "markdown", "productivity", "tauri"]
categories = ["gui"]
edition = "2021"

[lib]
name = "topplan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
